# private_dfm_other_info

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  format_code.bat  start_occtimgui.bat  start_occtimgui.ps1  vcpkg.json
IFR/installed/: DEPENDENCIES.md  Fresamento_CAM1_v3_feature_recognition_result.json  IFR特征识别结果JSON格式解析指南.md  QUICK_START.md  README_使用指南.md  batch_process.bat  tongtaiEx02_feature_recognition_result.json
IFR/installed/Features/: 00000-all.json  09.json  4tec-dianjizuo.json  ANC101.json  BallNutMount.json  C1 Toolpath Sampler.json  C2 Toolpath Sampler.json  C2-Hub_Imported Part v1.json  C3 Toolpath Sampler.json  Demo 3.json  Demo 5 - Aircraft Bracket.json  FMR_CAPP_CAM.json  Fresamento_CAM1_v3.json  Toolpath-Feature Rich Part.json  Toolpath-Top Clamp.json  Tutorial1 v1-boss.json  case1-15-boss.json  case1-16.json  case1-4.json  case2-10.json  case2-11.json  case2-12.json  case2-2.json  case2-9.json  case4-15.json  part23_x_t.json  partA.json  partB.json  partC.json  pocket-boss.json  si47312-CNC-front0905.json
IFR/installed/data/: 00000-all.stp  09.stp  4tec-dianjizuo.STEP  BallNutMount.STEP  C1 Toolpath Sampler.step  C2 Toolpath Sampler.step  C2-Hub_Imported Part v1.step  C3 Toolpath Sampler.step  Demo 3.step  Demo 5 - Aircraft Bracket.step  FMR_CAPP_CAM.stp  Fresamento_CAM1_v3.stp  Toolpath-Feature Rich Part.step  Toolpath-Top Clamp.step  Tutorial1 v1-boss.step  _2.stp  case1-15-boss.stp  case1-16.stp  case1-4.stp  case2-10.stp  case2-11.stp  case2-12.stp  case2-2.stp  case2-9.stp  case4-15.stp  part23_x_t.stp  pocket-boss.step  si47312-CNC-front0905.stp  tongtaiEx02.STEP
IFR/installed/include/featureRecognizer/: CNC_FeatureExport.h  CNC_FeatureRecognizer.h  CNC_Version.h
IFR/installed/lib/: featureRecognizer.lib
IFR/installed/lib/cmake/FeatureRecognizer/: FeatureRecognizerConfig.cmake  FeatureRecognizerConfigVersion.cmake  FeatureRecognizerTargets-release.cmake  FeatureRecognizerTargets.cmake
IFR/installed/standalone/: part23_x_t_fmr.json  result.json
memory-bank/: activeContext.md  changeLog.md  dfmCsharpApi_v1.md  dfmSdkApi_v1.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: Application.cpp  Application.h  ApplicationBootstrapper.cpp  ApplicationBootstrapper.h  GlfwOcctWindow.cpp  GlfwOcctWindow.h  main.cpp
src/ais/: Mesh_DataSource.cpp  Mesh_DataSource.h
src/api/: DfmOverlayBuilder.cpp  DfmOverlayBuilder.h  OcctDfmCapi.cpp  OcctDfmCapi.h  OcctDfmSdk.cpp  OcctDfmSdk.h  OcctDfmSession.cpp  OcctDfmSession.h
src/input/: InputManager.cpp  InputManager.h
src/model/: FeatureRecognitionModel.cpp  FeatureRecognitionModel.h  FeatureRecognitionModel_Mock.cpp  GeometryModel.cpp  GeometryModel.h  IModel.cpp  IModel.h  ModelFactory.cpp  ModelFactory.h  ModelImporter.cpp  ModelImporter.h  ModelManager.cpp  ModelManager.h  ShapeOrientationUtils.cpp  ShapeOrientationUtils.h
src/mvvm/: Command.h  GlobalSettings.h  MessageBus.h  Property.h  SelectionInfo.h  SelectionManager.cpp  SelectionManager.h  Signal.h
src/utils/: Logger.cpp  Logger.h  LoggerManager.cpp  LoggerManager.h
src/view/: FeatureRecognitionView.cpp  FeatureRecognitionView.h  FeatureTreeNodeIds.h  IView.h  ImGuiFontUtils.h  ImGuiView.cpp  ImGuiView.h  OcctShapeOwnerUtils.h  OcctView.cpp  OcctView.h  ViewManager.h
src/viewmodel/: Commands.h  FeatureRecognitionViewModel.cpp  FeatureRecognitionViewModel.h  GeometryViewModel.cpp  GeometryViewModel.h  IViewModel.h  ViewModelManager.cpp  ViewModelManager.h
src/window/: WindowManager.cpp  WindowManager.h
tests/: README.md  feature_recognition_model_test.cpp  feature_tree_node_ids_test.cpp  geometry_model_test.cpp  imgui_font_utils_test.cpp  mesh_datasource_test.cpp  message_bus_test.cpp  model_importer_test.cpp  model_manager_test.cpp  model_test.cpp  mvvm_integration_test.cpp  occt_dfm_capi_test.cpp  occt_dfm_session_test.cpp  occt_shape_owner_utils_test.cpp  property_test.cpp  selection_manager_test.cpp  shape_orientation_utils_test.cpp  signal_test.cpp
